--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,14 @@
     "react-icons": "^4.12.0",
     "js-cookie": "^3.0.5",
     "next-auth": "^4.24.5",
-    "stripe": "^14.5.0"
+    "stripe": "^14.5.0",
+    "i18next": "^23.7.6",
+    "react-i18next": "^13.5.0",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
+    "socket.io-client": "^4.5.4",
+    "react-datetime-picker": "^5.5.0",
+    "react-datepicker": "^4.25.0"
   },
   "devDependencies": {
     "eslint": "8.55.0",
