--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,5 @@ FRONTEND_URL=http://localhost:3000
 # Admin credentials (first run)
 ADMIN_EMAIL=admin@apex-digital.co.za
 ADMIN_PASSWORD=Admin123!
+
+RUNWAYML_API_KEY
